# ray-tracer

./: Cargo.toml  results.ppm
src/: bounding_box.rs  bvh.rs  camera.rs  hittable.rs  main.rs  material.rs  primitive.rs  ray.rs  rect.rs  scenes.rs  sphere.rs  traceable.rs  triangle.rs  util.rs  vec.rs  vec3.rs
src/gui/: custom_textures.rs  mod.rs
src/gui/support/: mod.rs
