[package]
name = "Ray_Trace"
version = "0.1.0"
authors = ["Charlie <charliepapworth@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
impl_ops = "*"
fastrand = "*"
tobj = "3.2.0"
num_cpus = "*"
rblas = "*"
openblas-src = { version = "0.6.1", default-features = false, features = ["cblas", "system"] }
