[package]
name = "Ray_Trace"
version = "0.1.0"
authors = ["Charlie <charliepapworth@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl_ops = "*"
fastrand = "*"
tobj = "3.2.0"
num_cpus = "*"
enum_dispatch = "*"
clipboard = "0.5"
glium = { version = "0.30", default-features = true }
image = "0.23"
imgui ="*"
imgui-glium-renderer = "*"
imgui-winit-support = "*"


[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
